macros/tests/trybuild/const.rs
use serde_args_macros::help;

#[help]
const FOO: usize = 0;

fn main() {}
